[package]
name = "sl-rrule-rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.5", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level="s"
lto = true

