[package]
name = "rrule-rust"
version = "0.0.3"
edition = "2021"
authors = ["suilang <suilangzpc@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.5", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level="s"
lto = true

