[package]
name = "rrule-rust"
version = "0.0.8"
edition = "2021"
authors = ["suilang <suilangzpc@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

keywords = ["rrule", "rust", "webassembly"]
license = "MIT"
repository = "https://github.com/suilang/rrule-rust"

[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.5", default-features = false }
serde = "1.0"
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
